CSS/index.css
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  width: 100%;
  height: 54px;
  background-color: #30694b;
  box-shadow: 0px 1px 6px #282828;
  position: fixed;
  z-index: 2;
  display: none;
}
@media (min-width: 1000px) {
  nav {
    display: flex;
  }
}
nav img {
  margin: 0 30px;
  cursor: pointer;
  height: 54px;
  width: auto;
}
nav .nav-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: row;
  margin: 0 15px;
}
nav .nav-links a {
  font-size: 2rem;
  margin: 15px;
  color: #FFFFFF;
  text-decoration: none;
  text-shadow: 1px 1px 2px #282828;
  transition: 0.1s ease;
  border-bottom: 1px solid rgba(0, 0, 0, 0);
}
nav .nav-links a:hover {
  transition: 0.1s ease;
  color: #efe26e;
  border-bottom: 1px solid #efe26e;
}
header {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 600px;
  padding: 10% 0;
  background-image: url("../Images/wmp_header.jpg");
  background-size: cover;
  position: fixed;
}
@media (min-width: 501px) {
  header {
    padding: 10% 5%;
  }
}
@media (min-width: 1000px) {
  header {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 0 15%;
  }
}
header h1,
header h4 {
  text-shadow: 1px 1px 2px #282828;
  padding: none;
  color: #FFFFFF;
  text-align: center;
  width: 80%;
  margin: 10px 0;
  line-height: 1.2;
}
@media (min-width: 1000px) {
  header h1,
  header h4 {
    margin: 20px 0;
  }
}
header h1 {
  font-weight: 900;
}
header .btn-row {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  margin: 20px 0;
}
@media (min-width: 1000px) {
  header .btn-row {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
  }
}
header .btn-row button,
header .btn-row button:active {
  padding: 10px;
  margin: 10px 0;
  font-size: 1.8rem;
  background-color: rgba(0, 0, 0, 0);
  color: #FFFFFF;
  border: 2px solid #FFFFFF;
  border-radius: 10px;
  text-shadow: 1px 1px 2px #282828;
  width: 75%;
  cursor: pointer;
  transition: 0.1s ease;
}
@media (min-width: 501px) {
  header .btn-row button,
  header .btn-row button:active {
    width: 60%;
  }
}
@media (min-width: 1000px) {
  header .btn-row button,
  header .btn-row button:active {
    width: 20%;
    margin: 0 20px;
  }
}
@media (min-width: 1000px) {
  header .btn-row .log-in {
    display: none;
  }
}
header .btn-row .sign-up {
  background-color: #FFFFFF;
  color: #000000;
  text-shadow: none;
}
header .btn-row .sign-up:hover {
  background-color: #5aab61;
  border-color: #5aab61;
  color: #FFFFFF;
  text-shadow: 1px 1px 2px #282828;
  transition: 0.1s ease;
}
header .btn-row .learn-more:hover,
header .btn-row .log-in:hover {
  border-color: #efe26e;
  background-color: #efe26e;
  transition: 0.1s ease;
}
main {
  background-color: #5aab61;
  width: 100%;
  position: relative;
  top: 600px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}
main section.intro {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-direction: column;
  width: 100%;
  padding: 0 5%;
  background-color: #5aab61;
  color: #FFFFFF;
  text-shadow: 1px 1px 3px #3c3c3c;
}
@media (min-width: 501px) {
  main section.intro {
    padding: 0 10%;
  }
}
@media (min-width: 1000px) {
  main section.intro {
    padding: 30px 15%;
  }
}
main section.intro h2 {
  margin-bottom: 5px;
  padding: 0 20px;
}
main section.intro p {
  margin: 10px 0;
  padding: 0 20px;
}
main .section-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  margin: 0 20px 20px;
  padding: 20px 20px 0;
}
@media (min-width: 1000px) {
  main .section-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 0 15%;
  }
}
.section-container section {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
  width: 90%;
  margin: 20px;
  padding: 0 20px;
  background-color: #30694b;
  color: #FFFFFF;
  text-shadow: 1px 1px 2px #282828;
  box-shadow: 3px 3px 6px #282828;
}
@media (min-width: 501px) {
  .section-container section {
    height: 100%;
    width: 80%;
    margin: 20px 16px;
    padding: 20px;
  }
}
@media (min-width: 501px) {
  .section-container section {
    box-shadow: 3px 3px 6px #282828;
  }
}
@media (min-width: 1000px) {
  .section-container section {
    width: 45%;
    height: 625px;
  }
}
.section-container section .text-container {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
  width: 100%;
}
.section-container section .text-container .card-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  width: 100%;
  border-bottom: 1px solid #efe26e;
  margin: 12px 0 8px;
}
@media (min-width: 501px) {
  .section-container section .text-container .card-title {
    margin: 0;
  }
}
.section-container section .text-container .card-title h3 {
  margin: 0;
  width: 100%;
  padding-bottom: 0;
}
@media (min-width: 501px) {
  .section-container section .text-container .card-title h3 {
    margin: 10px 0 5px;
    padding-bottom: 6px;
  }
}
.section-container section img {
  width: 100%;
  border: 2px solid #efe26e;
  margin: 0 0 20px;
}
@media (min-width: 501px) {
  .section-container section img {
    margin: 0;
  }
}
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  position: relative;
  top: 600px;
  background-color: #30694b;
  padding: 40px 0 0;
}
footer h3 {
  margin: 10px 0;
}
footer .download-links {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-direction: row;
  width: 90%;
  margin: 20px 0;
}
@media (min-width: 501px) {
  footer .download-links {
    width: 80%;
  }
}
@media (min-width: 1000px) {
  footer .download-links {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    width: 70%;
  }
}
footer .download-links img {
  margin: 0 10px;
  width: 50%;
  cursor: pointer;
}
@media (min-width: 501px) {
  footer .download-links img {
    width: 40%;
  }
}
@media (min-width: 1000px) {
  footer .download-links img {
    width: 30%;
  }
}
footer .social-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: row;
  width: 90%;
  margin: 20px 0;
}
@media (min-width: 501px) {
  footer .social-links {
    width: 80%;
  }
}
@media (min-width: 1000px) {
  footer .social-links {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    width: 70%;
  }
}
footer .social-links a {
  margin: 0 20px;
  color: #000000;
  text-decoration: none;
  font-size: 3rem;
  transition: 0.2s ease;
}
@media (min-width: 501px) {
  footer .social-links a {
    font-size: 3.8rem;
  }
}
@media (min-width: 1000px) {
  footer .social-links a {
    margin: 0 40px;
  }
}
footer .social-links a:hover {
  color: #efe26e;
  transition: 0.2s ease;
}
footer p {
  font-size: 1rem;
}
* {
  box-sizing: border-box;
}
html,
body {
  margin: 0;
  padding: 0;
  font-size: 62.5%;
  scroll-behavior: smooth;
}
body {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  font-family: 'Heebo', 'Helvetica';
}
h1 {
  font-size: 4.6rem;
  font-family: 'Bree Serif, Heebo, Helvetica';
}
h2 {
  font-size: 3.6rem;
}
h3 {
  font-size: 2.8rem;
}
h4 {
  font-size: 2.2rem;
}
h5 {
  font-size: 1.8rem;
}
h6 {
  font-size: 1.6rem;
}
p {
  font-size: 1.8rem;
}

